feat: criando mock

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "mock": "json-server src/mock/db.json",
     "test": "jest --runInBand",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +33,7 @@
     "codelyzer": "^5.0.0",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.4.0",
+    "json-server": "^0.16.3",
     "protractor": "~7.0.0",
     "ts-jest": "^26.5.4",
     "ts-node": "~7.0.0",
