--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "ts-jest": "^26.5.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "typescript": "3.4.5"
   }
 }
